--- a/index.html
+++ b/index.html
@@ -308,6 +308,17 @@
             </div>
           </div>
 
+          <div class="col-md-4">
+            <div class="Visitors">
+              <i class="ion-ios-email-outline"></i>
+              <h3>Page Visitors</h3>
+              <!-- hitwebcounter Code START -->
+              <!-- hitwebcounter Code START -->
+              <a href="https://www.hitwebcounter.com" target="_blank">
+              <img src="https://hitwebcounter.com/counter/counter.php?page=7808995&style=0036&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>     
+            </div>
+          </div>
+
         </div>
       </div>
 
