--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>Ranchi, Jharkhand</address>
+              <address>Ranchi, Jharkhand, India</address>
             </div>
           </div>
 
@@ -308,16 +308,16 @@
             </div>
           </div>
 
-         <!--<div class="col-md-4">
+         <div class="col-md-4">
             <div class="Visitors">
-              <i class="ion-ios-email-outline"></i>
+              <i class="ion-ios-body-outline"></i>
               <h3>Page Visitors</h3>
               <!-- hitwebcounter Code START -->
               <!-- hitwebcounter Code START -->
-              <!-- <a href="https://www.hitwebcounter.com" target="_blank">
-              <img src="https://hitwebcounter.com/counter/counter.php?page=7808995&style=0036&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>     
+              <a href='https://www.free-counters.org/'>free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e470170fca98d94b06f221b7387c7d77665fcfaf'></script>
+	      <script type="text/javascript" src="https://freevisitorcounters.com/en/home/counter/824227/t/9"></script>    
             </div>
-          </div> -->
+          </div> 
 
         </div>
       </div>
