--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
               <h3>Page Visitors</h3>
               <!-- hitwebcounter Code START -->
               <!-- hitwebcounter Code START -->
-              <a href='https://www.free-counters.org/'>free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e470170fca98d94b06f221b7387c7d77665fcfaf'></script>
+              <a href='https://www.free-counters.org/'></a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e470170fca98d94b06f221b7387c7d77665fcfaf'></script>
 	      <script type="text/javascript" src="https://freevisitorcounters.com/en/home/counter/824227/t/9"></script>    
             </div>
           </div> 
