--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <title>Rishabh Anand</title>
-  <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
-
+  <meta property='og:title' content=''/>
+  <meta property='og:image' content=''/>
+  <meta property='og:description' content=''/>
+  <meta property='og:url' content=''/> 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
   <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
@@ -296,7 +296,7 @@
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
               <h3>Address</h3>
-              <address>Ranchi, Jharkhand, India</address>
+              <address>Ranchi, Jharkhand</address>
             </div>
           </div>
 
@@ -308,16 +308,16 @@
             </div>
           </div>
 
-         <div class="col-md-4">
-            <div class="Visitors">
-              <i class="ion-ios-body-outline"></i>
+          <div class="col-md-4">
+            <div class="contact-email">
+              <i class="ion-ios-email-outline"></i>
               <h3>Page Visitors</h3>
               <!-- hitwebcounter Code START -->
               <!-- hitwebcounter Code START -->
-              <a href='https://www.free-counters.org/'></a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e470170fca98d94b06f221b7387c7d77665fcfaf'></script>
-	      <script type="text/javascript" src="https://freevisitorcounters.com/en/home/counter/824227/t/9"></script>    
+              <a href="https://www.hitwebcounter.com" target="_blank">
+              <img src="https://hitwebcounter.com/counter/counter.php?page=7808995&style=0036&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter"   border="0" /></a>     
             </div>
-          </div> 
+          </div>
 
         </div>
       </div>
